# Tranquilo

./: Cargo.toml  build.rs
assets/: default-preferences.json  tasks.db
assets/themes/: eclipse.json  graphite.json
src/: db.rs  main.rs  music_player.rs  settings.rs
ui/: appwindow.slint  borderless-window.slint  checkbox.slint  globals.slint  main.slint  settings.slint  slider.slint  sliding-transition.slint  stats.slint  tabs.slint
ui/pages/: main.slint  settings.slint  tasks.slint
ui/pages/settings/: config-settings.slint  music-settings.slint  themes-settings.slint  timer-settings.slint
