[package]
name = "tranquilo"
description = "Your personal pomodoro assistant!"
build = "build.rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
chrono = "0.4.34"
cpal = "0.15.2"
directories = "5.0.1"
hex_color = { version = "3.0.0", features = ["serde"]}
i-slint-backend-winit = "1.4.1"
rodio = "0.17.3"
serde = { version = "1.0.196", features = ["derive"]}
serde_json = "1.0.113"
single-instance = "0.3.3"
slint = { version = "1.4.1", default-features = false, features = ["compat-1-2", "std", "backend-winit", "renderer-femtovg", "renderer-software"]}
sqlite = "0.33.0"
walkdir = "2.4.0"


[build-dependencies]
slint-build = "1.4.1"

[package.metadata.bundle]
name = "Tranquilo"
identifier = "io.risuleia.tranquilo"
description = "Your personal pomodoro assistant!"
icon = ["./icon192.png", "./icon512.png"]
